syntax = "proto3";
package stockbuddy;

message Quote {
	 string symbol = 1;
	 float open = 2;
	 float high = 3;
	 float low = 4;
	 float close = 5;
	 float adj_close = 6;
	 int32 volume = 7;
}

message QuoteRequest {
	string symbol = 1;
	int32 period = 2;
}

message QuoteResponse {
	repeated Quote quotes = 1;
}

service QuoteService {
	rpc ListQuoteHistory(QuoteRequest) returns (QuoteResponse);
}
